backend-openshift.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-backend
  namespace: sunitjha1995-dev
  labels:
    app: weather-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-backend
  template:
    metadata:
      labels:
        app: weather-backend
    spec:
      containers:
        - name: weather-backend
          image: image-registry.openshift-image-registry.svc:5000/sunitjha1995-dev/weather-backend:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: weather-backend
  namespace: sunitjha1995-dev
  labels:
    app: weather-backend
spec:
  selector:
    app: weather-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: weather-backend-route
  namespace: sunitjha1995-dev
  labels:
    app: weather-backend
spec:
  to:
    kind: Service
    name: weather-backend
  port:
    targetPort: http
  tls:
    termination: edge
